About me and scrollbar

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
             <img src="Img/hector1.png" alt="">
         </div>
     </section>
+    <!--About Section-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="Img/hector1.png" alt="">
+        </div>
+        <div class="about-content">
+            <h2>About <span>Me</span></h2>
+            <p>I have 15 years of experience in customer service, operational management and remote work for the last couple of years. I'm on my way to become a software developer as a Front-end with React knowledge, getting new skills to HTML, CSS, and JavaScript, creating solutions with React JS. I've managed in roles involving performing support, administrative tasks and project coordination. Furthermore, I am eager to complement my customer background with my technical ability to run client success and tackle meaningful projects in a dynamic environment.</p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
     <script src="Script.js"></script>
 </body>
 </html>
