--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#skilss">Skills</a>
+            <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -51,7 +51,7 @@
             <img src="Img/hector1.png" alt="">
         </div>
     </section>
-    <!--About Section-->
+    <!--AboutSection-->
     <section class="about" id="about">
         <div class="about-img">
             <img src="Img/hector1.png" alt="">
@@ -60,6 +60,28 @@
             <h2>About <span>Me</span></h2>
             <p>I have 15 years of experience in customer service, operational management and remote work for the last couple of years. I'm on my way to become a software developer as a Front-end with React knowledge, getting new skills to HTML, CSS, and JavaScript, creating solutions with React JS. I've managed in roles involving performing support, administrative tasks and project coordination. Furthermore, I am eager to complement my customer background with my technical ability to run client success and tackle meaningful projects in a dynamic environment.</p>
             <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+    <!--Skills Section-->
+    <section class="services" id="services">
+        <h2 class="heading">Services</h2>
+        
+        <div class="services-container">
+            <div class="services-box">
+                <div class="services-info">
+                    <i class="bx bxl-figma"></i>
+                    <h4>UI/UX Design</h4>
+                    <p>Create intuitive and attractive digital experiences. I focus on user-centered design principles to ensure that every interaction is seamless and engaging. My process allows for real-time feedback and adjustments, ensuring the final product not only meets but exceeds user expectations.</p>
+                </div>
+            </div>
+            <div class="services-box">
+                <div class="services-info">
+                    <i class="bx bx-code"></i>
+                    <h4>Front-end Development</h4>
+                    <p>Junior Front-End Developer | HTML, CSS, JavaScript | Building the Future with React JS
+                    I am a passionate Junior Front-End Developer specializing in HTML, CSS, and JavaScript, with a strong focus on React JS. My journey into software development has equipped me with the skills to create dynamic interfaces and deliver engaging solutions. I am excited to leverage my growing technical expertise to build innovative projects and contribute to the evolving landscape of front-end development.</p>
+                </div>
+            </div>
         </div>
     </section>
     <script src="Script.js"></script>
