--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <!--BarSection-->
+<!--BarSection-->
     <header class="header">
         <a href="#home" class="logo">Hector <span>Garcia</span></a>
         <i class="bx bx-menu" id="menu-icon"></i>
@@ -21,7 +21,7 @@
         </nav>
         <button class="gradient-btn">Contact Me</button>
     </header>
-    <!--HomeSection-->
+<!--HomeSection-->
     <section class="home" id="home">
         <div class="home--content">
             <h1>
@@ -51,7 +51,7 @@
             <img src="Img/hector1.png" alt="">
         </div>
     </section>
-    <!--AboutSection-->
+<!--AboutSection-->
     <section class="about" id="about">
         <div class="about-img">
             <img src="Img/hector1.png" alt="">
@@ -62,7 +62,7 @@
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
-    <!--Skills Section-->
+<!--Skills Section-->
     <section class="services" id="services">
         <h2 class="heading">Services</h2>
         
@@ -83,6 +83,10 @@
                 </div>
             </div>
         </div>
+    </section>
+<!--Projects-->
+    <section class="projects" id="projects">
+        <h2 class="heading">Projects</h2>
     </section>
     <script src="Script.js"></script>
 </body>
