--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
 <!--Projects-->
     <section class="projects" id="projects">
         <h2 class="heading">Projects</h2>
+        <div class="projects-box">
+            <div class="project-card">
+                
+            </div>
+        </div>
     </section>
     <script src="Script.js"></script>
 </body>
