--- a/index.html
+++ b/index.html
@@ -89,9 +89,30 @@
         <h2 class="heading">Projects</h2>
         <div class="projects-box">
             <div class="project-card">
-                
+                <img src="img/secretnumber.PNG" alt="">
+                <h3>Project 1</h3>
+                <p>I developed a secret number game using HTML, CSS, and JavaScript. In this game, users have 5 attempts to guess a randomly generated secret number within a given range. The game provides feedback after each guess, indicating whether the guess is too high, too low, or correct. The interface is built using HTML for structure, CSS for styling, and JavaScript for the game logic, including tracking the number of attempts and dynamically updating the user interface.</p>
+                <div class="btn">Review Project</div>
+            </div>
+<!--Project2-->
+            <div class="project-card">
+                <img src="img/portfolio.PNG" alt="">
+                <h3>Project 2</h3>
+                <p>I developed a responsive personal portfolio website using HTML and CSS, based on a Figma design template. The portfolio adapts seamlessly across different screen sizes, from desktops to mobile devices, ensuring a consistent and user-friendly experience. The layout was carefully constructed to follow the design specifications from Figma..</p>
+                <div class="btn">Review Project</div>
+            </div>
+<!--Project3-->
+            <div class="project-card">
+                <img src="img/textencryptor.PNG" alt="">
+                <h3>Project 3</h3>
+                <p>I developed a flexible text encryption and decryption web application using HTML, CSS, and JavaScript. This application allows users to securely encrypt and decrypt messages, enabling them to exchange secret texts with others who know the encryption method used. The user interface is responsive and adapts to different devices, ensuring a smooth experience whether on desktop or mobile. The JavaScript handles the encryption logic, converting text into a secure format and allowing for easy decryption with a simple key.</p>
+                <div class="btn">Review Project</div>
             </div>
         </div>
+    </section>
+<!--Contact Section-->
+    <section class="contact" id="contact">
+        
     </section>
     <script src="Script.js"></script>
 </body>
