--- a/index.html
+++ b/index.html
@@ -125,11 +125,45 @@
                 </div>
             </div>
             <div class="input-group-2">
-                <textarea name="" id="" placeholder="Your Message"></textarea>
+                <textarea name="" id="" placeholder="Your Message" cols="30" rows="10"></textarea>
                 <input type="submit" value="Send Message" class="btn">
             </div>
         </form>
     </section>
+<!--Footer-->
+    <footer class="footer">
+        <div class="social-icons">
+            <a href="#">
+                <i class="bx bxl-github"></i>
+            </a>
+            <a href="#">
+                <i class="bx bxl-linkedin"></i>
+            </a>
+            <a href="#">
+                <i class="bx bxl-twitter"></i>
+            </a>
+        </div>
+        <ul class="list">
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+            <li>
+                <a href="#services">Services</a>
+            </li>
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+        <p class="copyright">
+            <span>©< HecthorDev ></span> | Copyright 2024 | All rights reserved
+        </p>
+    </footer>
     <script src="Script.js"></script>
 </body>
 </html>
